Creation du menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Accueil</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="">Accueil</a></li>
+            <li><a>Filière</a></li>
+            <li><a>A Propos</a></li>
+            <li><a>Contacts</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
