--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <nav>
         <ul>
             <li><a href="">Accueil</a></li>
-            <li><a>Filière</a></li>
+            <li>
+                <a href="">Demo</a>
+                <a>Filière</a>
+                <a href="">Demo</a>
+            </li>
             <li><a>A Propos</a></li>
             <li><a>Contacts</a></li>
         </ul>
