Creation d'un nouveau lien

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <nav>
         <ul>
             <li><a href="">Accueil</a></li>
+            <li><a href="">Mot du directeur</a></li>
             <li><a>Filière</a></li>
             <li><a>A Propos</a></li>
             <li><a>Contacts</a></li>
