Creation du contact

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="">Demo</a>
             </li>
             <li><a>A Propos</a></li>
-            <li><a>Contacts</a></li>
+            <li><a>Nous Contacter</a></li>
         </ul>
     </nav>
 </body>
